<resources>
    <string name="app_name">BlogApp</string>
    <string name="regName_S">Nombre</string>
    <string name="regMail_s">Correo</string>
    <string name="regPassword_s">Contraseña</string>
    <string name="regPasswordConfirm_s">Confirmar contraseña</string>
    <string name="regBtn_s">Registrarse</string>
    <string name="logBtn_s">Iniciar sesion</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pop_up_title">Titulo</string>
    <string name="pop_up_description">Descripción</string>
    <string name="post_detail_btnAdd">Enviar</string>
    <string name="post_detail_edittext">Añade un comentario</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_Profile">Perfil</string>
    <string name="menu_Settings">Configuración</string>
    <string name="menu_Logout">Cerrar sesión</string>
</resources>
