<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_Profile" />
        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_Settings" />
        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_Logout" />
    </group>

</menu>
