<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.blogapp.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home2" />

    <fragment
        android:id="@+id/nav_Profile"
        android:name="com.example.blogapp.Fragments.ProfileFragment"
        android:label="@string/menu_Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_Settings"
        android:name="com.example.blogapp.Fragments.SettingsFragment"
        android:label="@string/menu_Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_Logout"
        android:name="com.example.blogapp.Fragments.SettingsFragment"
        android:label="@string/menu_Logout"
        tools:layout="@layout/fragment_settings" />
</navigation>